--- a/tests/test_cases/2019/commands/7C4.7CC.2126.yaml
+++ b/tests/test_cases/2019/commands/7C4.7CC.2126.yaml
@@ -1,6 +1,11 @@
 command_id: 7C4.7CC.2126
 test_cases:
 - expected_values:
+    TOYOTA_ECT: 90.55
+  response: |-
+    2126
+    7CC036126FF
+- expected_values:
     TOYOTA_ECT: 1.3
   response: 7CC03612600
 - expected_values:
