--- a/tests/test_cases/2019/commands/7E0.0131.yaml
+++ b/tests/test_cases/2019/commands/7E0.0131.yaml
@@ -1,6 +1,11 @@
 command_id: 7E0.0131
 test_cases:
 - expected_values:
+    CLR_DIST: 45
+  response: |-
+    0131
+    7E8044131002D
+- expected_values:
     CLR_DIST: 0
   response: '7E80441310000'
 - expected_values:
