--- a/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
@@ -1,6 +1,33 @@
 command_id: 7E0.7E8.2101
 test_cases:
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 37.2549
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.43137
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 132
+    TOYOTA_CALCULATED_LOAD_7E0: 27.45098
+    TOYOTA_COOLANT_TEMP: 17
+    TOYOTA_ENGINE_RUN_TIME: 16640
+    TOYOTA_ENGINE_SPEED: 15390
+    TOYOTA_INTAKE_AIR: 32
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 29
+    TOYOTA_THROTTLE_MOTOR_DUTY: 2.35294
+    TOYOTA_THROTTLE_SENSOR_POSITION: 18.03922
+    TOYOTA_THROTTLE_SENSOR_VOLT: 50.58824
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 21.56863
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 30515
+    TOYOTA_VEHICLE_LOAD: 0.06409
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 45
+  response: |-
+    2101
+    7E8101D610146002A03
+    7E8214B1D486484113C
+    7E8221E0041002E8137
+    7E8235F2F06002D0077
+    7E82433CD0000000000
+- expected_values:
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.82353
     TOYOTA_AMBIENT_T_V2: 60
@@ -157,8 +184,6 @@ test_cases:
     7E823512C020007001A
     7E82435190000000000
 - expected_values:
-    TOYOTA_ACCEL_SENS_NO_1_VOLT: 37.2549
-    TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.03922
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 121
     TOYOTA_CALCULATED_LOAD_7E0: 22.35294
@@ -168,14 +193,11 @@ test_cases:
     TOYOTA_INTAKE_AIR: 15
     TOYOTA_MAF: 655.35
     TOYOTA_MAP: 28
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.47059
     TOYOTA_THROTTLE_SENSOR_POSITION: 18.03922
     TOYOTA_THROTTLE_SENSOR_VOLT: 50.58824
     TOYOTA_THROTTL_SENSOR_2_VOLT: 21.56863
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 3893
     TOYOTA_VEHICLE_LOAD: 0.07172
     TOYOTA_VEHICLE_SPEED: 3
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 123
   response: |-
     7E8101D610139002F02
     7E821C51C3764790D00
@@ -235,8 +257,6 @@ test_cases:
     7E823512A02000B002A
     7E82433A60000000000
 - expected_values:
-    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
-    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 93
     TOYOTA_CALCULATED_LOAD_7E0: 24.31373
@@ -246,14 +266,11 @@ test_cases:
     TOYOTA_INTAKE_AIR: 12
     TOYOTA_MAF: 655.35
     TOYOTA_MAP: 25
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.07843
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.64706
     TOYOTA_THROTTLE_SENSOR_VOLT: 50.19608
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 1078
     TOYOTA_VEHICLE_LOAD: 0.05951
     TOYOTA_VEHICLE_SPEED: 0
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 121
   response: |-
     7E8101D61013E002702
     7E821F41934645D10AC
@@ -287,8 +304,6 @@ test_cases:
     7E823512B02000B002F
     7E824336C0000000000
 - expected_values:
-    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
-    TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.47059
     TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 125
     TOYOTA_CALCULATED_LOAD_7E0: 25.09804
@@ -298,14 +313,11 @@ test_cases:
     TOYOTA_INTAKE_AIR: 14
     TOYOTA_MAF: 429
     TOYOTA_MAP: 27
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.47059
     TOYOTA_THROTTLE_SENSOR_POSITION: 16.47059
     TOYOTA_THROTTLE_SENSOR_VOLT: 48.62745
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 4149
     TOYOTA_VEHICLE_LOAD: 0.05951
     TOYOTA_VEHICLE_SPEED: 3
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 124
   response: |-
     7E8101D610140002701
     7E821AD1B36637D0979
@@ -521,8 +533,6 @@ test_cases:
     7E823663B030012003F
     7E82435C90000000000
 - expected_values:
-    TOYOTA_ACCEL_SENS_NO_1_VOLT: 42.7451
-    TOYOTA_ACCEL_SENS_NO_2_VOLT: 24.70588
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 118
     TOYOTA_CALCULATED_LOAD_7E0: 69.80392
@@ -532,14 +542,11 @@ test_cases:
     TOYOTA_INTAKE_AIR: 14
     TOYOTA_MAF: 655.35
     TOYOTA_MAP: 73
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.47059
     TOYOTA_THROTTLE_SENSOR_POSITION: 24.70588
     TOYOTA_THROTTLE_SENSOR_VOLT: 58.82353
     TOYOTA_THROTTL_SENSOR_2_VOLT: 26.66667
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 3637
     TOYOTA_VEHICLE_LOAD: 0.18616
     TOYOTA_VEHICLE_SPEED: 2
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 123
   response: |-
     7E8101D6101B2007A0D
     7E821C149366476193E
@@ -625,8 +632,6 @@ test_cases:
     7E823815705001C0056
     7E82435400000000000
 - expected_values:
-    TOYOTA_ACCEL_SENS_NO_1_VOLT: 49.01961
-    TOYOTA_ACCEL_SENS_NO_2_VOLT: 32.15686
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 111
     TOYOTA_CALCULATED_LOAD_7E0: 81.96078
@@ -636,14 +641,11 @@ test_cases:
     TOYOTA_INTAKE_AIR: 15
     TOYOTA_MAF: 655.35
     TOYOTA_MAP: 86
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.47059
     TOYOTA_THROTTLE_SENSOR_POSITION: 32.15686
     TOYOTA_THROTTLE_SENSOR_VOLT: 68.23529
     TOYOTA_THROTTL_SENSOR_2_VOLT: 32.94118
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 3381
     TOYOTA_VEHICLE_LOAD: 0.27008
     TOYOTA_VEHICLE_SPEED: 2
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 122
   response: |-
     7E8101D6101D100B11B
     7E821835637646F22D9
