--- a/tests/test_cases/2025/commands/700.708.221F3F.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F3F.yaml
@@ -1,6 +1,9 @@
 command_id: 700.708.221F3F
 test_cases:
 - expected_values:
+    TOYOTA_CAT_T_22: 95.9
+  response: 70805621F3F02F3
+- expected_values:
     TOYOTA_CAT_T_22: 97.88
   response: 70805621F3F02FE
 - expected_values:
