--- a/tests/test_cases/2019/commands/7B0.7B8.213C.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.213C.yaml
@@ -2,4 +2,9 @@ command_id: 7B0.7B8.213C
 test_cases:
 - expected_values:
     TOYOTA_STOP_LIGHT_RELAY: 0
+  response: |-
+    213C
+    7B803613C00
+- expected_values:
+    TOYOTA_STOP_LIGHT_RELAY: 0
   response: 7B803613C00
