--- a/tests/test_cases/2019/commands/7B0.7B8.213D.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.213D.yaml
@@ -6,6 +6,15 @@ test_cases:
     TOYOTA_BUZZER: 0
     TOYOTA_ECB_WARN: 0
     TOYOTA_SLIP_WARN: 0
+  response: |-
+    213D
+    7B804613D0000
+- expected_values:
+    TOYOTA_ABS_WARN: 0
+    TOYOTA_BRAKE_WARN: 0
+    TOYOTA_BUZZER: 0
+    TOYOTA_ECB_WARN: 0
+    TOYOTA_SLIP_WARN: 0
   response: 7B804613D0000
 - expected_values:
     TOYOTA_ABS_WARN: 0
