--- a/tests/test_cases/2019/commands/7B0.7B8.2142.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2142.yaml
@@ -2,6 +2,14 @@ command_id: 7B0.7B8.2142
 test_cases:
 - expected_values:
     TOYOTA_FL_ACC: 0
+    TOYOTA_FR_ACC: 255
+    TOYOTA_RL_ACC: 0
+    TOYOTA_RR_ACC: 0
+  response: |-
+    2142
+    7B8066142FF000000
+- expected_values:
+    TOYOTA_FL_ACC: 0
     TOYOTA_FR_ACC: 0
     TOYOTA_RL_ACC: 0
     TOYOTA_RR_ACC: 0
