--- a/tests/test_cases/2019/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2147.yaml
@@ -1,6 +1,16 @@
 command_id: 7B0.7B8.2147
 test_cases:
 - expected_values:
+    TOYOTA_LAT_G: -0.02
+    TOYOTA_LNG_G: -0.08
+    TOYOTA_STEERING_ANGLE: -1.1
+    TOYOTA_STEER_ANGLE: -1.1
+    TOYOTA_YAW: 0
+    TOYOTA_YAW_RATE_V2: 0
+  response: |-
+    2147
+    7B8076147FFFC807FF5
+- expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
     TOYOTA_STEERING_ANGLE: -309.2
