--- a/tests/test_cases/2019/commands/7B0.7B8.21A6.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.21A6.yaml
@@ -2,4 +2,9 @@ command_id: 7B0.7B8.21A6
 test_cases:
 - expected_values:
     TOYOTA_INSPECTION_MODE: 0
+  response: |-
+    21A6
+    7B80461A60000
+- expected_values:
+    TOYOTA_INSPECTION_MODE: 0
   response: 7B80461A60000
