--- a/tests/test_cases/2019/commands/7B0.7B8.21BE.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.21BE.yaml
@@ -10,4 +10,17 @@ test_cases:
     TOYOTA_RR_WHEEL_SPEED_OPEN: 0
     TOYOTA_STROKE_OPEN: 0
     TOYOTA_YAW_RATE_OPEN__NORMAL_0_ERROR_1_: 0
+  response: |-
+    21BE
+    7B80461BE0000
+- expected_values:
+    TOYOTA_DECELERATION_OPEN: 0
+    TOYOTA_FL_WHEEL_SPEED_OPEN: 0
+    TOYOTA_FR_WHEEL_CYLINDER_OPEN: 0
+    TOYOTA_FR_WHEEL_SPEED_OPEN: 0
+    TOYOTA_MASTER_CYLINDER_OPEN: 0
+    TOYOTA_RL_WHEEL_SPEED_OPEN: 0
+    TOYOTA_RR_WHEEL_SPEED_OPEN: 0
+    TOYOTA_STROKE_OPEN: 0
+    TOYOTA_YAW_RATE_OPEN__NORMAL_0_ERROR_1_: 0
   response: 7B80461BE0000
