--- a/tests/test_cases/2019/commands/7C0.21A7.yaml
+++ b/tests/test_cases/2019/commands/7C0.21A7.yaml
@@ -2,4 +2,9 @@ command_id: 7C0.21A7
 test_cases:
 - expected_values:
     TOYOTA_SEAT_BELT_BEEP: 192
+  response: |-
+    21A7
+    7C80361A7C0
+- expected_values:
+    TOYOTA_SEAT_BELT_BEEP: 192
   response: 7C80361A7C0
