--- a/tests/test_cases/2019/commands/7C0.7C8.2112.yaml
+++ b/tests/test_cases/2019/commands/7C0.7C8.2112.yaml
@@ -5,6 +5,14 @@ test_cases:
     TOYOTA_P_SEATBELT_BUCKLE: 0
     TOYOTA_TAIL_CANCEL: 0
   response: |-
+    2112
+    7C81009611200000000
+    7C82100000000000000
+- expected_values:
+    TOYOTA_CHECK_ENGINE: 0
+    TOYOTA_P_SEATBELT_BUCKLE: 0
+    TOYOTA_TAIL_CANCEL: 0
+  response: |-
     7C81009611200000000
     7C82100000000000000
 - expected_values:
