--- a/tests/test_cases/2019/commands/7C4.2143.yaml
+++ b/tests/test_cases/2019/commands/7C4.2143.yaml
@@ -2,6 +2,11 @@ command_id: 7C4.2143
 test_cases:
 - expected_values:
     TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 9
+  response: |-
+    2143
+    7CC03614309
+- expected_values:
+    TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 9
   response: 7CC03614309
 - expected_values:
     TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 32
