--- a/tests/test_cases/2019/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2019/commands/7C4.7CC.2122.yaml
@@ -1,6 +1,11 @@
 command_id: 7C4.7CC.2122
 test_cases:
 - expected_values:
+    TOYOTA_AAT: 23.6
+  response: |-
+    2122
+    7CC03612286
+- expected_values:
     TOYOTA_AAT: 4.7
   response: 7CC03612250
 - expected_values:
