--- a/tests/test_cases/2019/commands/7C4.7CC.214B.yaml
+++ b/tests/test_cases/2019/commands/7C4.7CC.214B.yaml
@@ -1,6 +1,11 @@
 command_id: 7C4.7CC.214B
 test_cases:
 - expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 1.8
+  response: |-
+    214B
+    7CC03614B5A
+- expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: -1.35
   response: 7CC03614B51
 - expected_values:
