--- a/tests/test_cases/2019/commands/7E0.0104.yaml
+++ b/tests/test_cases/2019/commands/7E0.0104.yaml
@@ -1,6 +1,11 @@
 command_id: 7E0.0104
 test_cases:
 - expected_values:
+    LOAD_PCT: 28.62745
+  response: |-
+    0104
+    7E803410449
+- expected_values:
     LOAD_PCT: 0
   response: '7E803410400'
 - expected_values:
