--- a/tests/test_cases/2019/commands/7E0.0105.yaml
+++ b/tests/test_cases/2019/commands/7E0.0105.yaml
@@ -1,6 +1,11 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
+    ECT: 92
+  response: |-
+    0105
+    7E803410584
+- expected_values:
     ECT: 13
   response: '7E803410535'
 - expected_values:
