--- a/tests/test_cases/2019/commands/7E0.0144.yaml
+++ b/tests/test_cases/2019/commands/7E0.0144.yaml
@@ -1,6 +1,11 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.99959
+  response: |-
+    0144
+    7E80441447FF2
+- expected_values:
     EQ_RAT: 0.41691
   response: 7E8044144355D
 - expected_values:
