--- a/tests/test_cases/2019/commands/7E0.7E8.2145.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2145.yaml
@@ -11,6 +11,22 @@ test_cases:
     TOYOTA_MISFIRE_MARGIN_V2: -128
     TOYOTA_MISFIRE_RPM_V2: 0
   response: |-
+    2145
+    7E81015614501000000
+    7E82100000000000000
+    7E82200000000009000
+    7E82380000000000000
+- expected_values:
+    TOYOTA_ALL_CYLINDERS_MISFIRE_CNT: 0
+    TOYOTA_CYL1_MISFIRE_CNT: 0
+    TOYOTA_CYL2_MISFIRE_CNT: 0
+    TOYOTA_CYL3_MISFIRE_CNT: 0
+    TOYOTA_CYL4_MISFIRE_CNT: 0
+    TOYOTA_IGNITION_TRIG_CNT: 0
+    TOYOTA_MISFIRE_LOAD_V2: 0
+    TOYOTA_MISFIRE_MARGIN_V2: -128
+    TOYOTA_MISFIRE_RPM_V2: 0
+  response: |-
     7E81015614501000000
     7E82100000000000000
     7E82200000000007C00
