--- a/tests/test_cases/2025/commands/700.708.2215E8.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215E8.yaml
@@ -43,6 +43,16 @@ test_cases:
 - expected_values:
     TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
     TOYOTA_AUX_BAT_CAP_IGN_ON: 1
+    TOYOTA_AUX_BAT_CHG_I_INTEG: 1039.9
+    TOYOTA_AUX_BAT_DISCHG_I_INTEG: 855.9
+    TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 11
+  response: |-
+    70810146215E8000028
+    708219F0000216F8181
+    70822000B0000013FCE
+- expected_values:
+    TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
+    TOYOTA_AUX_BAT_CAP_IGN_ON: 1
     TOYOTA_AUX_BAT_CHG_I_INTEG: 2268
     TOYOTA_AUX_BAT_DISCHG_I_INTEG: 1552.3
     TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 93
