Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.221002.yaml
+++ b/tests/test_cases/2025/commands/700.708.221002.yaml
@@ -1,9 +1,9 @@
 command_id: 700.708.221002
 test_cases:
 - expected_values:
-    TOYOTA_12V_V: 12.22165
-    TOYOTA_BAT_VOLTAGE: 12.22165
-  response: 70805621002271C
+    TOYOTA_12V_V: 11.66989
+    TOYOTA_BAT_VOLTAGE: 11.66989
+  response: '708056210022558'
 - expected_values:
     TOYOTA_12V_V: 12.49509
     TOYOTA_BAT_VOLTAGE: 12.49509
