--- a/tests/test_cases/2025/commands/700.708.221F6D.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F6D.yaml
@@ -57,6 +57,14 @@ test_cases:
     708210A900000280027
     7082200000000000000
 - expected_values:
+    TOYOTA_HFP_ACTUAL: 20.28
+    TOYOTA_HFP_TARGET: 5140
+    TOYOTA_LOW_FUEL_PRESSURE: 510
+  response: |-
+    708100E621F6D1B0202
+    7082107EC0000350033
+    7082200000000000000
+- expected_values:
     TOYOTA_HFP_ACTUAL: 9.98
     TOYOTA_HFP_TARGET: 6000
     TOYOTA_LOW_FUEL_PRESSURE: 570
