Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -344,6 +344,8 @@ unsupported_commands_by_ecu:
   - 750.758.221004
   - 750.758.221005
   - 750.758.222021
+  "780":
+  - 780.788.2104:TOYOTA_BUCKLE_LS,TOYOTA_BUCKLE_RS
   "7B0":
   - 7B0.7B8.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
   - 7B0.7B8.2105:TOYOTA_DECEL,TOYOTA_DECEL2
