--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -7,18 +7,29 @@ supported_commands_by_ecu:
   - 750.758.2130|e=2A,ta=2A,fc=1:TOYOTA_TIRE_P_FL,TOYOTA_TIRE_P_FR,TOYOTA_TIRE_P_RL,TOYOTA_TIRE_P_RR,TOYOTA_TIRE_P_SPARE,TOYOTA_TP_FL,TOYOTA_TP_FR,TOYOTA_TP_RL,TOYOTA_TP_RR,TOYOTA_TP_SPARE
   "7B0":
   - 7B0.7B8.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
+  - 7B0.7B8.2105:TOYOTA_DECEL,TOYOTA_DECEL2
   - 7B0.7B8.2106:TOYOTA_YAW_1,TOYOTA_YAW_2,TOYOTA_YAW_RATE,TOYOTA_YAW_RATE2
   - 7B0.7B8.211D:TOYOTA_MAIN_IDLE_SW,TOYOTA_RESERVOIR_WARNING_SW
   - 7B0.7B8.211F:TOYOTA_PARKING_BRAKE_SW,TOYOTA_STOP_LIGHT_SW
   - 7B0.7B8.2121:TOYOTA_VEHICLE_SPEED_7B0,TOYOTA_VSS,TOYOTA_VSS_V3
   - 7B0.7B8.213C:TOYOTA_STOP_LIGHT_RELAY
   - 7B0.7B8.213D:TOYOTA_ABS_WARN,TOYOTA_BRAKE_WARN,TOYOTA_BUZZER,TOYOTA_ECB_WARN,TOYOTA_SLIP_WARN
+  - 7B0.7B8.2142:TOYOTA_FL_ACC,TOYOTA_FR_ACC,TOYOTA_RL_ACC,TOYOTA_RR_ACC
   - 7B0.7B8.2146:TOYOTA_ZP_DEC,TOYOTA_ZP_DEC2,TOYOTA_ZP_YAW,TOYOTA_ZP_YAW_RATE
   - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEERING_ANGLE,TOYOTA_STEER_ANGLE,TOYOTA_YAW,TOYOTA_YAW_RATE_V2
   - 7B0.7B8.215A:TOYOTA_FL_WHEEL_VSC_CTRL,TOYOTA_FR_WHEEL_VSC_CTRL,TOYOTA_RL_WHEEL_VSC_CTRL,TOYOTA_RR_WHEEL_VSC_CTRL,TOYOTA_TRC_TRAC__BRAKE_CTRL,TOYOTA_TRC_TRAC__CTRL,TOYOTA_TRC_TRAC__ENGINE_CTRL
   - 7B0.7B8.215F:TOYOTA_BA_CTRL_STATUS,TOYOTA_FL_WHEEL_ABS_CTRL,TOYOTA_FR_WHEEL_ABS_CTRL,TOYOTA_PBA_CTRL_STATUS,TOYOTA_RL_WHEEL_ABS_CTRL,TOYOTA_RL_WHEEL_EBD_CTRL,TOYOTA_RR_WHEEL_ABS_CTRL,TOYOTA_RR_WHEEL_EBD_CTRL
   - 7B0.7B8.21A6:TOYOTA_INSPECTION_MODE
   - 7B0.7B8.21BE:TOYOTA_ACCUMULATOR_OPEN,TOYOTA_DECELERATION_OPEN,TOYOTA_FL_WHEEL_SPEED_OPEN,TOYOTA_FR_WHEEL_CYLINDER_OPEN,TOYOTA_FR_WHEEL_SPEED_OPEN,TOYOTA_HV_COMMUNICATION_OPEN,TOYOTA_HV_COMM_OPEN,TOYOTA_MASTER_CYLINDER_OPEN,TOYOTA_RL_WHEEL_SPEED_OPEN,TOYOTA_RR_WHEEL_SPEED_OPEN,TOYOTA_STROKE_OPEN,TOYOTA_YAW_RATE_OPEN_ERROR
+  "7C0":
+  - 7C0.7C8.2112:TOYOTA_CHECK_ENGINE,TOYOTA_P_SEATBELT_BUCKLE,TOYOTA_TAIL_CANCEL
+  - 7C0.7C8.2121:TOYOTA_VSS_7C0
+  - 7C0.7C8.2123:TOYOTA_COOLANT_T
+  "7C4":
+  - 7C4.7CC.2122:TOYOTA_AAT
+  - 7C4.7CC.2126:TOYOTA_ECT
+  - 7C4.7CC.213D:TOYOTA_ADJUSTED_AMBIENT_T
+  - 7C4.7CC.214B:TOYOTA_EVAP_FIN_THERMISTOR
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -225,13 +236,18 @@ unsupported_commands_by_ecu:
   "7B3":
   - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE_V2
   "7C0":
+  - 7C0.21A7:TOYOTA_SEAT_BELT_BEEP
   - 7C0.221022
   - 7C0.7C8.2129:TOYOTA_FLI_VOL,TOYOTA_FUEL_INPUT
   - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
   "7C4":
   - 7C4.2143:TOYOTA_AIR_OUTLET_SERVO_ACTU_PULSE_D,TOYOTA_AIR_OUTLET_SERVO_PULSE_D
   - 7C4.214C:TOYOTA_EVAP_TARGET_T
+  - 7C4.7CC.2121:TOYOTA_CABIN_T
   - 7C4.7CC.2124:TOYOTA_SOLAR_D_SIDE
+  - 7C4.7CC.2129:TOYOTA_T_DRIVER
+  - 7C4.7CC.213C:TOYOTA_BLOWER_MOTOR_SPEED_LEVEL
+  - 7C4.7CC.2153:TOYOTA_REGULATOR_P
   "7D0":
   - 7D0.7D8.2162:TOYOTA_PARKING_BRAKE,TOYOTA_PARKING_BRAKE_2
   "7D2":
@@ -261,4 +277,9 @@ unsupported_commands_by_ecu:
   - 7D2.7DA.221F4A:TOYOTA_ACC_PEDAL_POS_2
   - 7D2.7DA.221F9A:TOYOTA_HVBAT_C,TOYOTA_HVBAT_V
   "7E0":
+  - 7E0.7E8.2103:TOYOTA_EVAP_PURGE_DUTY,TOYOTA_IGN_ADVANCE,TOYOTA_LONG_FT_B1S1,TOYOTA_SHORT_FT_B1S1
+  - 7E0.7E8.2104:TOYOTA_AFS_CURRENT_B1S1,TOYOTA_AFS_VOLTAGE_B1S1,TOYOTA_AF_LAMBDA_B1S1,TOYOTA_O2S_B1S2,TOYOTA_TARGET_AIR_FUEL_RATIO
+  - 7E0.7E8.2106:TOYOTA_2ND_AIR_MONITOR_AVAIL,TOYOTA_2ND_AIR_MONITOR_INCMPL,TOYOTA_A_C_MONITOR_AVAIL,TOYOTA_A_C_MONITOR_INCMPL,TOYOTA_CATALYST_MONITOR_AVAIL,TOYOTA_CATALYST_MONITOR_INCMPL,TOYOTA_COMPLETE_PARTS_MONITOR_AVAIL,TOYOTA_EGR_VVT_MONITOR_AVAIL,TOYOTA_EGR_VVT_MONITOR_INCMPL,TOYOTA_EVAP_MONITOR_AVAIL,TOYOTA_EVAP_MONITOR_ICMPL,TOYOTA_FUEL_SYSTEM_MONITOR_AVAIL,TOYOTA_HEATED_CATALYST_MONITOR_AVAIL,TOYOTA_HEATED_CATALYST_MONITOR_INCMPL,TOYOTA_MIL,TOYOTA_MILON_RUN_DISTANCE,TOYOTA_MISFIRE_MONITOR_AVAIL,TOYOTA_NUMBER_OF_EMISSION_DTC,TOYOTA_O2S_A_FS_HEATER_MONITOR_AVAIL,TOYOTA_O2S_A_FS_HEATER_MONITOR_INCMPL,TOYOTA_O2S_A_FS_MONITOR_AVAIL,TOYOTA_O2S_A_FS_MONITOR_INCMPL,TOYOTA_RUNNING_TIME_FROM_MIL_ON
   - 7E0.7E8.2121:TOYOTA_CC_CANCEL_SWITCH_ON,TOYOTA_CC_CCS_INDICATOR_M_CPU_ON,TOYOTA_CC_CCS_READY_M_CPU_ON,TOYOTA_CC_CC_ON,TOYOTA_CC_DRIVING_FORCE,TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON,TOYOTA_CC_MAIN_SW_M_CPU_ON,TOYOTA_CC_ON,TOYOTA_CC_RES_ACC_SWITCH_ON,TOYOTA_CC_S,TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON,TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON,TOYOTA_CC_VSS
+  - 7E0.7E8.2125:TOYOTA_A_C_COMPRESSOR,TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH,TOYOTA_ELECTRICAL_LOAD_SIGNAL_1,TOYOTA_ELECTRICAL_LOAD_SIGNAL_2,TOYOTA_NEUTRAL_POSITION_SW_SIGNAL,TOYOTA_PATTERN_SWITCH_PWR_M_,TOYOTA_POWER_STEERING_SIGNAL,TOYOTA_SHIFT_SW_STATUS_D_RANGE,TOYOTA_SHIFT_SW_STATUS_N_RANGE,TOYOTA_SHIFT_SW_STATUS_P_RANGE,TOYOTA_SHIFT_SW_STATUS_R_RANGE,TOYOTA_SPORTS_MODE_SELECTION_SW,TOYOTA_SPORTS_SHIFT_DOWN_SW,TOYOTA_SPORTS_SHIFT_UP_SW,TOYOTA_STARTER_CONTROL,TOYOTA_STARTER_SIGNAL,TOYOTA_STOP_LIGHT_SWITCH,TOYOTA_TC_TERMINAL
+  - 7E0.7E8.2145:TOYOTA_ALL_CYLINDERS_MISFIRE_CNT,TOYOTA_CYL1_MISFIRE_CNT,TOYOTA_CYL2_MISFIRE_CNT,TOYOTA_CYL3_MISFIRE_CNT,TOYOTA_CYL4_MISFIRE_CNT,TOYOTA_IGNITION_TRIG_CNT,TOYOTA_MISFIRE_LOAD_V2,TOYOTA_MISFIRE_MARGIN_V2,TOYOTA_MISFIRE_RPM_V2
