--- a/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -29,6 +29,20 @@ test_cases:
     7582A10076130B0B1B0
     7582A21AFFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.65517
+    TOYOTA_TIRE_P_FR: 2.65517
+    TOYOTA_TIRE_P_RL: 2.65517
+    TOYOTA_TIRE_P_RR: 2.62069
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.65517
+    TOYOTA_TP_FR: 2.65517
+    TOYOTA_TP_RL: 2.65517
+    TOYOTA_TP_RR: 2.62069
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    7582A10076130B7B7B7
+    7582A21B5FF00000000
+- expected_values:
     TOYOTA_TIRE_P_FL: 2.53448
     TOYOTA_TIRE_P_FR: 2.53448
     TOYOTA_TIRE_P_RL: 2.53448
