--- a/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
@@ -7,6 +7,12 @@ test_cases:
     TOYOTA_YAW_RATE2: -2
   response: 7B80561067F7EF2
 - expected_values:
+    TOYOTA_YAW_1: -1
+    TOYOTA_YAW_2: -1
+    TOYOTA_YAW_RATE: -1
+    TOYOTA_YAW_RATE2: -1
+  response: 7B80561067F7F10
+- expected_values:
     TOYOTA_YAW_1: 0
     TOYOTA_YAW_2: -2
     TOYOTA_YAW_RATE: 0
@@ -36,3 +42,9 @@ test_cases:
     TOYOTA_YAW_RATE: 0
     TOYOTA_YAW_RATE2: 9
   response: 7B8056106808915
+- expected_values:
+    TOYOTA_YAW_1: 1
+    TOYOTA_YAW_2: 0
+    TOYOTA_YAW_RATE: 1
+    TOYOTA_YAW_RATE2: 0
+  response: 7B805610681800F
