Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -16,6 +16,20 @@ test_cases:
     7582A21AEFF00000000
 - expected_values:
     TOYOTA_TIRE_P_FL: 2.53448
+    TOYOTA_TIRE_P_FR: 2.53448
+    TOYOTA_TIRE_P_RL: 2.55172
+    TOYOTA_TIRE_P_RR: 2.58621
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.53448
+    TOYOTA_TP_FR: 2.53448
+    TOYOTA_TP_RL: 2.55172
+    TOYOTA_TP_RR: 2.58621
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    7582A10076130B0B0B1
+    7582A21B3FF00000000
+- expected_values:
+    TOYOTA_TIRE_P_FL: 2.53448
     TOYOTA_TIRE_P_FR: 2.55172
     TOYOTA_TIRE_P_RL: 2.53448
     TOYOTA_TIRE_P_RR: 2.51724
@@ -28,6 +42,20 @@ test_cases:
   response: |-
     7582A10076130B0B1B0
     7582A21AFFF00000000
+- expected_values:
+    TOYOTA_TIRE_P_FL: 2.55172
+    TOYOTA_TIRE_P_FR: 2.56897
+    TOYOTA_TIRE_P_RL: 2.56897
+    TOYOTA_TIRE_P_RR: 2.60345
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.55172
+    TOYOTA_TP_FR: 2.56897
+    TOYOTA_TP_RL: 2.56897
+    TOYOTA_TP_RR: 2.60345
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    7582A10076130B1B2B2
+    7582A21B4FF00000000
 - expected_values:
     TOYOTA_TIRE_P_FL: 2.65517
     TOYOTA_TIRE_P_FR: 2.65517
