--- a/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
@@ -32,6 +32,12 @@ test_cases:
   response: 7B8056106807FE2
 - expected_values:
     TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: -1
+    TOYOTA_YAW_RATE: 0
+    TOYOTA_YAW_RATE2: -1
+  response: 7B8056106807FF1
+- expected_values:
+    TOYOTA_YAW_1: 0
     TOYOTA_YAW_2: 0
     TOYOTA_YAW_RATE: 0
     TOYOTA_YAW_RATE2: 0
