--- a/tests/test_cases/2018/commands/7C0.7C8.2121.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2121.yaml
@@ -1,6 +1,12 @@
 command_id: 7C0.7C8.2121
 test_cases:
 - expected_values:
+    TOYOTA_VSS_7C0: 0
+  response: 7C803612100
+- expected_values:
+    TOYOTA_VSS_7C0: 15
+  response: 7C80361210F
+- expected_values:
     TOYOTA_VSS_7C0: 29
   response: 7C80361211D
 - expected_values:
