--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -5,6 +5,8 @@ supported_commands_by_ecu:
   - 750.2130|e=2A,fc=1:TOYOTA_TP_FL_V3,TOYOTA_TP_FR_V3,TOYOTA_TP_RL_V3,TOYOTA_TP_RR_V3,TOYOTA_TP_SPARE_V3
   - 750.758.2116|e=2A,fc=1:TOYOTA_TT_1,TOYOTA_TT_2,TOYOTA_TT_3,TOYOTA_TT_4,TOYOTA_TT_5,TOYOTA_TT_FL,TOYOTA_TT_FL_V1,TOYOTA_TT_FR,TOYOTA_TT_FR_V1,TOYOTA_TT_RL,TOYOTA_TT_RL_V1,TOYOTA_TT_RR,TOYOTA_TT_RR_V1,TOYOTA_TT_SPARE,TOYOTA_TT_SPARE_V1
   - 750.758.2130|e=2A,ta=2A,fc=1:TOYOTA_TIRE_P_FL,TOYOTA_TIRE_P_FR,TOYOTA_TIRE_P_RL,TOYOTA_TIRE_P_RR,TOYOTA_TIRE_P_SPARE,TOYOTA_TP_FL,TOYOTA_TP_FR,TOYOTA_TP_RL,TOYOTA_TP_RR,TOYOTA_TP_SPARE
+  "780":
+  - 780.788.2104:TOYOTA_BUCKLE_LS,TOYOTA_BUCKLE_RS
   "7B0":
   - 7B0.7B8.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
   - 7B0.7B8.2105:TOYOTA_DECEL,TOYOTA_DECEL2
@@ -240,6 +242,7 @@ unsupported_commands_by_ecu:
   - 7C0.221022
   - 7C0.7C8.2129:TOYOTA_FLI_VOL,TOYOTA_FUEL_INPUT
   - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
+  - 7C0.7C8.221022:TOYOTA_FLV,TOYOTA_FUEL_LEVEL
   "7C4":
   - 7C4.2143:TOYOTA_AIR_OUTLET_SERVO_ACTU_PULSE_D,TOYOTA_AIR_OUTLET_SERVO_PULSE_D
   - 7C4.214C:TOYOTA_EVAP_TARGET_T
@@ -283,3 +286,4 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2121:TOYOTA_CC_CANCEL_SWITCH_ON,TOYOTA_CC_CCS_INDICATOR_M_CPU_ON,TOYOTA_CC_CCS_READY_M_CPU_ON,TOYOTA_CC_CC_ON,TOYOTA_CC_DRIVING_FORCE,TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON,TOYOTA_CC_MAIN_SW_M_CPU_ON,TOYOTA_CC_ON,TOYOTA_CC_RES_ACC_SWITCH_ON,TOYOTA_CC_S,TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON,TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON,TOYOTA_CC_VSS
   - 7E0.7E8.2125:TOYOTA_A_C_COMPRESSOR,TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH,TOYOTA_ELECTRICAL_LOAD_SIGNAL_1,TOYOTA_ELECTRICAL_LOAD_SIGNAL_2,TOYOTA_NEUTRAL_POSITION_SW_SIGNAL,TOYOTA_PATTERN_SWITCH_PWR_M_,TOYOTA_POWER_STEERING_SIGNAL,TOYOTA_SHIFT_SW_STATUS_D_RANGE,TOYOTA_SHIFT_SW_STATUS_N_RANGE,TOYOTA_SHIFT_SW_STATUS_P_RANGE,TOYOTA_SHIFT_SW_STATUS_R_RANGE,TOYOTA_SPORTS_MODE_SELECTION_SW,TOYOTA_SPORTS_SHIFT_DOWN_SW,TOYOTA_SPORTS_SHIFT_UP_SW,TOYOTA_STARTER_CONTROL,TOYOTA_STARTER_SIGNAL,TOYOTA_STOP_LIGHT_SWITCH,TOYOTA_TC_TERMINAL
   - 7E0.7E8.2145:TOYOTA_ALL_CYLINDERS_MISFIRE_CNT,TOYOTA_CYL1_MISFIRE_CNT,TOYOTA_CYL2_MISFIRE_CNT,TOYOTA_CYL3_MISFIRE_CNT,TOYOTA_CYL4_MISFIRE_CNT,TOYOTA_IGNITION_TRIG_CNT,TOYOTA_MISFIRE_LOAD_V2,TOYOTA_MISFIRE_MARGIN_V2,TOYOTA_MISFIRE_RPM_V2
+  - 7E0.7E8.21DA:TOYOTA_GEAR_V2_V2
