--- a/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
@@ -8,7 +8,19 @@ test_cases:
     7B8210BFC7A00000000
 - expected_values:
     TOYOTA_DECEL: 0.07129
+    TOYOTA_DECEL2: -0.64165
+  response: |-
+    7B810096105807B02A3
+    7B82100022000000000
+- expected_values:
+    TOYOTA_DECEL: 0.07129
     TOYOTA_DECEL2: -0.35647
   response: |-
     7B810096105807D03C3
     7B82100F79D00000000
+- expected_values:
+    TOYOTA_DECEL: 0.21388
+    TOYOTA_DECEL2: 1.35459
+  response: |-
+    7B810096105818906A1
+    7B821451AF000000000
