--- a/tests/test_cases/2025/commands/700.708.221041.yaml
+++ b/tests/test_cases/2025/commands/700.708.221041.yaml
@@ -1,9 +1,9 @@
 command_id: 700.708.221041
 test_cases:
 - expected_values:
-    TOYOTA_ECT_IGN: 3.75
-    TOYOTA_ECT_INIT: 51.25
-  response: '708056210414692'
+    TOYOTA_ECT_IGN: -2.5
+    TOYOTA_ECT_INIT: 52.5
+  response: 708056210413C94
 - expected_values:
     TOYOTA_ECT_IGN: 6.875
     TOYOTA_ECT_INIT: 6.875
