Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2105.yaml
@@ -8,11 +8,11 @@ test_cases:
     7E8100C61054E7E0830
     7E821083004E404E400
 - expected_values:
-    TOYOTA_CATALYST_T_B1S1: 539.1
-    TOYOTA_CATALYST_T_B1S2: 539.1
+    TOYOTA_CATALYST_T_B1S1: 517.8
+    TOYOTA_CATALYST_T_B1S2: 517.8
   response: |-
-    7E8100C61054E19169F
-    7E821169F12D112D100
+    7E8100C61054E2615CA
+    7E82115CA1251125100
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 601.1
     TOYOTA_CATALYST_T_B1S2: 601.1
@@ -37,6 +37,12 @@ test_cases:
   response: |-
     7E8100C61054E371280
     7E82112800F3F0F3F00
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 478.3
+    TOYOTA_CATALYST_T_B1S2: 478.3
+  response: |-
+    7E8100C61054E37143F
+    7E821143F10D710D700
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 681.2
     TOYOTA_CATALYST_T_B1S2: 681.2
