--- a/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
@@ -54,6 +54,8 @@ test_cases:
     7E8235130050020005C
     7E8242F260000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.82353
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 126
     TOYOTA_CALCULATED_LOAD_7E0: 0
@@ -63,11 +65,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 21
     TOYOTA_MAF: 181
     TOYOTA_MAP: 100
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 18.43137
     TOYOTA_THROTTLE_SENSOR_VOLT: 51.37255
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 6191
     TOYOTA_VEHICLE_LOAD: 0
     TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 6
   response: |-
     7E8101D610100000000
     7E821B5643D647E0000
@@ -75,6 +80,8 @@ test_cases:
     7E82351300200060018
     7E8242FC20000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.82353
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 82
     TOYOTA_CALCULATED_LOAD_7E0: 0
@@ -84,11 +91,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 22
     TOYOTA_MAF: 181
     TOYOTA_MAP: 100
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
     TOYOTA_THROTTLE_SENSOR_POSITION: 18.82353
     TOYOTA_THROTTLE_SENSOR_VOLT: 51.37255
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 3631
     TOYOTA_VEHICLE_LOAD: 0
     TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 2
   response: |-
     7E8101D610100000000
     7E821B5643E64520000
@@ -174,6 +184,8 @@ test_cases:
     7E823512C05001F0059
     7E82436040000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.2549
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 127
     TOYOTA_CALCULATED_LOAD_7E0: 21.96078
@@ -183,11 +195,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 23
     TOYOTA_MAF: 648
     TOYOTA_MAP: 24
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
     TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 6709
     TOYOTA_VEHICLE_LOAD: 0.05035
     TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 7
   response: |-
     7E8101D610138002102
     7E82188183F647F10F1
@@ -221,7 +236,25 @@ test_cases:
     7E8235F2E2A027B040F
     7E824358E0000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 132
     TOYOTA_CALCULATED_LOAD_7E0: 23.52941
+    TOYOTA_COOLANT_TEMP: 11
+    TOYOTA_ENGINE_RUN_TIME: 3584
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 20
+    TOYOTA_MAF: 470
+    TOYOTA_MAP: 27
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 16.47059
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.01961
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13620
+    TOYOTA_VEHICLE_LOAD: 0.05188
+    TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 13
   response: |-
     7E8101D61013C002201
     7E821D61B3C64840BFF
@@ -229,6 +262,8 @@ test_cases:
     7E823512B02000D0035
     7E824342F0000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.47059
     TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 133
     TOYOTA_CALCULATED_LOAD_7E0: 23.92157
@@ -238,11 +273,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 20
     TOYOTA_MAF: 439
     TOYOTA_MAP: 28
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 16.47059
     TOYOTA_THROTTLE_SENSOR_VOLT: 48.62745
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 10803
     TOYOTA_VEHICLE_LOAD: 0.05341
     TOYOTA_VEHICLE_SPEED: 4
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 11
   response: |-
     7E8101D61013D002301
     7E821B71C3C63850AE3
@@ -328,6 +366,8 @@ test_cases:
     7E823512A2A027C0410
     7E82435670000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 130
     TOYOTA_CALCULATED_LOAD_7E0: 25.4902
@@ -337,11 +377,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 30
     TOYOTA_MAF: 464
     TOYOTA_MAP: 28
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 16.86275
     TOYOTA_THROTTLE_SENSOR_VOLT: 49.01961
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 9267
     TOYOTA_VEHICLE_LOAD: 0.05646
     TOYOTA_VEHICLE_SPEED: 2
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 9
   response: |-
     7E8101D610141002501
     7E821D01C4664820AE6
@@ -349,6 +392,8 @@ test_cases:
     7E823512B0200090024
     7E824337F0000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 128
     TOYOTA_CALCULATED_LOAD_7E0: 27.84314
@@ -358,11 +403,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 25
     TOYOTA_MAF: 642
     TOYOTA_MAP: 31
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
     TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 7220
     TOYOTA_VEHICLE_LOAD: 0.05951
     TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 7
   response: |-
     7E8101D610147002702
     7E821821F4164800E32
@@ -370,6 +418,8 @@ test_cases:
     7E823512D020007001C
     7E82434080000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
     TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 131
     TOYOTA_CALCULATED_LOAD_7E0: 27.84314
@@ -379,11 +429,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 23
     TOYOTA_MAF: 532
     TOYOTA_MAP: 32
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 16.86275
     TOYOTA_THROTTLE_SENSOR_VOLT: 49.41176
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 11059
     TOYOTA_VEHICLE_LOAD: 0.06409
     TOYOTA_VEHICLE_SPEED: 4
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 11
   response: |-
     7E8101D610147002A02
     7E82114203F63830B18
@@ -417,6 +470,8 @@ test_cases:
     7E82360310400130041
     7E82435400000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 35.29412
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 131
     TOYOTA_CALCULATED_LOAD_7E0: 30.98039
@@ -426,11 +481,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 23
     TOYOTA_MAF: 655.35
     TOYOTA_MAP: 35
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.64706
     TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
     TOYOTA_THROTTL_SENSOR_2_VOLT: 19.60784
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 8243
     TOYOTA_VEHICLE_LOAD: 0.06256
     TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 9
   response: |-
     7E8101D61014F002902
     7E821BC233F64830EA6
@@ -438,6 +496,8 @@ test_cases:
     7E8235A2D0200090020
     7E82433F40000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 111
     TOYOTA_CALCULATED_LOAD_7E0: 35.29412
@@ -447,11 +507,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 17
     TOYOTA_MAF: 648
     TOYOTA_MAP: 37
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.64706
     TOYOTA_THROTTLE_SENSOR_VOLT: 50.19608
     TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 4661
     TOYOTA_VEHICLE_LOAD: 0.08392
     TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
   response: |-
     7E8101D61015A003702
     7E821882539646F0A41
@@ -537,6 +600,8 @@ test_cases:
     7E8237F520400150045
     7E82435060000000000
 - expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 45.4902
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 28.62745
     TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 130
     TOYOTA_CALCULATED_LOAD_7E0: 80.78431
@@ -546,11 +611,14 @@ test_cases:
     TOYOTA_INTAKE_AIR: 21
     TOYOTA_MAF: 655.35
     TOYOTA_MAP: 84
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 28.23529
     TOYOTA_THROTTLE_SENSOR_VOLT: 63.52941
     TOYOTA_THROTTL_SENSOR_2_VOLT: 29.41176
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 10036
     TOYOTA_VEHICLE_LOAD: 0.22126
     TOYOTA_VEHICLE_SPEED: 3
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 9
   response: |-
     7E8101D6101CE009113
     7E8211F543D63821D84
