Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -44,6 +44,20 @@ test_cases:
     7582A21AFFF00000000
 - expected_values:
     TOYOTA_TIRE_P_FL: 2.55172
+    TOYOTA_TIRE_P_FR: 2.55172
+    TOYOTA_TIRE_P_RL: 2.55172
+    TOYOTA_TIRE_P_RR: 2.51724
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.55172
+    TOYOTA_TP_FR: 2.55172
+    TOYOTA_TP_RL: 2.55172
+    TOYOTA_TP_RR: 2.51724
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    7582A10076130B1B1B1
+    7582A21AFFF00000000
+- expected_values:
+    TOYOTA_TIRE_P_FL: 2.55172
     TOYOTA_TIRE_P_FR: 2.56897
     TOYOTA_TIRE_P_RL: 2.56897
     TOYOTA_TIRE_P_RR: 2.60345
