--- a/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 3.2
   response: 7CC03614B5E
+- expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 6.35
+  response: 7CC03614B67
