--- a/tests/test_cases/2018/commands/7C4.7CC.2126.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.2126.yaml
@@ -1,6 +1,9 @@
 command_id: 7C4.7CC.2126
 test_cases:
 - expected_values:
+    TOYOTA_ECT: 85.65
+  response: 7CC036126F1
+- expected_values:
     TOYOTA_ECT: 88.45
   response: 7CC036126F9
 - expected_values:
