--- a/tests/test_cases/2018/commands/7C4.7CC.213D.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.213D.yaml
@@ -1,5 +1,8 @@
 command_id: 7C4.7CC.213D
 test_cases:
 - expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 22.96
+  response: 7CC03613DA8
+- expected_values:
     TOYOTA_ADJUSTED_AMBIENT_T: 26.8
   response: 7CC03613DB4
