--- a/tests/test_cases/2025/commands/700.708.22105E.yaml
+++ b/tests/test_cases/2025/commands/700.708.22105E.yaml
@@ -1,8 +1,8 @@
 command_id: 700.708.22105E
 test_cases:
 - expected_values:
-    TOYOTA_ECU_INTERNAL_T: 2
-  response: 7080462105E2A
+    TOYOTA_ECU_INTERNAL_T: -4
+  response: '7080462105E24'
 - expected_values:
     TOYOTA_ECU_INTERNAL_T: 80
   response: '7080462105E78'
