Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -84,6 +84,10 @@ test_cases:
     7E8223A7FF682CC7FFF
     7E8231FFF23FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.25196
+    TOYOTA_AF_LAMBDA_B1S1: 0.99547
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99128
   response: |-
     7E8101861047F85800F
