--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -72,6 +72,20 @@ test_cases:
     7082198930000000000
 - expected_values:
     TOYOTA_AFRL_HIGH_1: 9.36941
+    TOYOTA_AFRL_IDLE_1: 6.63529
+    TOYOTA_AFRL_LOW_1: 3.51059
+    TOYOTA_AFRL_MID_1_1: 8.58824
+    TOYOTA_AFRL_MID_2_1: 12.49412
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 9.60784
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.86275
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 3.72549
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 8.82353
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 12.7451
+  response: |-
+    70810086210A2918996
+    70821A0980000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 9.36941
     TOYOTA_AFRL_IDLE_1: 7.02588
     TOYOTA_AFRL_LOW_1: 3.51059
     TOYOTA_AFRL_MID_1_1: 9.76
