--- a/tests/test_cases/2015/command_support.yaml
+++ b/tests/test_cases/2015/command_support.yaml
@@ -233,6 +233,8 @@ unsupported_commands_by_ecu:
   - 750.758.221005|e=2A,ta=2A,fc=1:TOYOTA_TP_1,TOYOTA_TP_2,TOYOTA_TP_3,TOYOTA_TP_4,TOYOTA_TP_5,TOYOTA_TP_FL_V2,TOYOTA_TP_FL_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_SPARE_V2,TOYOTA_TP_SPARE_V2
   - 750.758.222021
   - 750.758.222021|e=2A,ta=2A,fc=1:TOYOTA_TID_1,TOYOTA_TID_2,TOYOTA_TID_3,TOYOTA_TID_4
+  "780":
+  - 780.788.2104:TOYOTA_BUCKLE_LS,TOYOTA_BUCKLE_RS
   "7B0":
   - 7B0.7B8.213C:TOYOTA_STOP_LIGHT_RELAY
   - 7B0.7B8.21BE:TOYOTA_ACCUMULATOR_OPEN,TOYOTA_DECELERATION_OPEN,TOYOTA_FL_WHEEL_SPEED_OPEN,TOYOTA_FR_WHEEL_CYLINDER_OPEN,TOYOTA_FR_WHEEL_SPEED_OPEN,TOYOTA_HV_COMMUNICATION_OPEN,TOYOTA_HV_COMM_OPEN,TOYOTA_MASTER_CYLINDER_OPEN,TOYOTA_RL_WHEEL_SPEED_OPEN,TOYOTA_RR_WHEEL_SPEED_OPEN,TOYOTA_STROKE_OPEN,TOYOTA_YAW_RATE_OPEN_ERROR
