--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -117,6 +117,10 @@ test_cases:
     7E82253800080C08001
     7E823ABFFA7FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 1.4923
+    TOYOTA_AF_LAMBDA_B1S1: 0.8093
+    TOYOTA_O2S_B1S2: 0.52
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2681C
