--- a/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
@@ -9,7 +9,10 @@ test_cases:
     7DA100B621075800080
     7DA2100800080000000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 2.47
     TOYOTA_FR_WHEEL_VSS: 2.35
+    TOYOTA_RL_WHEEL_VSS: 2.6
+    TOYOTA_RR_WHEEL_VSS: 2.53
   response: |-
     7DA100B62107580EB80
     7DA21F780FD81040000
@@ -22,7 +25,10 @@ test_cases:
     7DA100B621075848784
     7DA21A684BD849F0000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 39.6
     TOYOTA_FR_WHEEL_VSS: 39.63
+    TOYOTA_RL_WHEEL_VSS: 40.95
+    TOYOTA_RR_WHEEL_VSS: 40.7
   response: |-
     7DA100B6210758F7B8F
     7DA21788FE68FFF0000
@@ -35,7 +41,10 @@ test_cases:
     7DA100B6210759EFF9E
     7DA21E39F059EF00000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 83.56
     TOYOTA_FR_WHEEL_VSS: 83.58
+    TOYOTA_RL_WHEEL_VSS: 83.58
+    TOYOTA_RR_WHEEL_VSS: 83.67
   response: |-
     7DA100B621075A0A6A0
     7DA21A4A0AFA0A60000
