Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -289,6 +289,24 @@ test_cases:
     708238000800900004B
     7082434393732320000
 - expected_values:
+    TOYOTA_EOT_V2: -19
+    TOYOTA_EOT_V2_V2: -19
+  response: |-
+    708102262107B003204
+    70821950208E87F0A86
+    708220E800A7F1481ED
+    7082380007FFD000085
+    7082415616116160E23
+- expected_values:
+    TOYOTA_EOT_V2: -19
+    TOYOTA_EOT_V2_V2: -19
+  response: |-
+    708102262107B003204
+    70821950209B67F0A85
+    70822E3800A7F14820D
+    7082380007FFD000085
+    7082415646415150D2B
+- expected_values:
     TOYOTA_EOT_V2: 11
     TOYOTA_EOT_V2_V2: 11
   response: |-
