--- a/tests/test_cases/2025/commands/700.708.221089.yaml
+++ b/tests/test_cases/2025/commands/700.708.221089.yaml
@@ -1,9 +1,9 @@
 command_id: 700.708.221089
 test_cases:
 - expected_values:
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 50.91578
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 50.91578
-  response: '708056210892098'
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 48.81666
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 48.81666
+  response: 708056210891F40
 - expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 51.5504
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 51.5504
