Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2024/commands/700.708.22107B.yaml
@@ -298,6 +298,15 @@ test_cases:
     7082380007FFE000087
     70824436969424229D0
 - expected_values:
+    TOYOTA_EOT_V2: 13
+    TOYOTA_EOT_V2_V2: 13
+  response: |-
+    708102262107B003404
+    708217A0100007EBF82
+    70822F7800E7EBC80AB
+    7082380008003000083
+    70824354C5A322E0008
+- expected_values:
     TOYOTA_EOT_V2: 70
     TOYOTA_EOT_V2_V2: 70
   response: |-
