--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -71,6 +71,20 @@ test_cases:
     70810086210A28E8C8B
     7082198930000000000
 - expected_values:
+    TOYOTA_AFRL_HIGH_1: 7.80706
+    TOYOTA_AFRL_IDLE_1: 6.63529
+    TOYOTA_AFRL_LOW_1: 0
+    TOYOTA_AFRL_MID_1_1: 7.02588
+    TOYOTA_AFRL_MID_2_1: 9.76
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.03922
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.86275
+    TOYOTA_AF_LEARN_LOW_PORT_B1: -1.76471
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 7.2549
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 10
+  response: |-
+    70810086210A2917B92
+    7082199940000000000
+- expected_values:
     TOYOTA_AFRL_HIGH_1: 9.36941
     TOYOTA_AFRL_IDLE_1: 6.63529
     TOYOTA_AFRL_LOW_1: 3.12
