Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -127,6 +127,15 @@ test_cases:
     7082380008000000083
     708243F87783E3D0000
 - expected_values:
+    TOYOTA_EOT_V2: 1
+    TOYOTA_EOT_V2_V2: 1
+  response: |-
+    708102262107B000005
+    70821190100007EF480
+    70822DD7F847E78801A
+    7082380008002000072
+    70824295B5B1C1C0000
+- expected_values:
     TOYOTA_EOT_V2: 30
     TOYOTA_EOT_V2_V2: 30
   response: |-
