--- a/tests/test_cases/2025/commands/700.708.221089.yaml
+++ b/tests/test_cases/2025/commands/700.708.221089.yaml
@@ -1,9 +1,9 @@
 command_id: 700.708.221089
 test_cases:
 - expected_values:
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 48.81666
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 48.81666
-  response: 708056210891F40
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 47.60845
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 47.60845
+  response: 708056210891E7A
 - expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 51.53819
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 51.53819
@@ -13,6 +13,6 @@ test_cases:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 51.5504
   response: '708056210892100'
 - expected_values:
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 62.76602
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 62.76602
-  response: 70805621089282E
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 62.52194
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 62.52194
+  response: '708056210892806'
