--- a/tests/test_cases/2025/commands/700.708.221F6D.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F6D.yaml
@@ -33,6 +33,14 @@ test_cases:
     7082101900000350033
     7082200000000000000
 - expected_values:
+    TOYOTA_HFP_ACTUAL: 5.83
+    TOYOTA_HFP_TARGET: 4000
+    TOYOTA_LOW_FUEL_PRESSURE: 610
+  response: |-
+    708100E621F6D1B0190
+    708210247000040003D
+    7082200000000000000
+- expected_values:
     TOYOTA_HFP_ACTUAL: 6.44
     TOYOTA_HFP_TARGET: 4000
     TOYOTA_LOW_FUEL_PRESSURE: 480
@@ -97,10 +105,10 @@ test_cases:
     7082106DA0000350035
     7082200000000000000
 - expected_values:
-    TOYOTA_HFP_ACTUAL: 19.51
+    TOYOTA_HFP_ACTUAL: 19.26
     TOYOTA_HFP_TARGET: 20000
     TOYOTA_LOW_FUEL_PRESSURE: 470
   response: |-
     708100E621F6D1B07D0
-    70821079F000035002F
+    708210786000035002F
     7082200000000000000
