Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2024/commands/700.708.22107B.yaml
@@ -154,6 +154,15 @@ test_cases:
     7082380008001000080
     708243F5F693C3C0000
 - expected_values:
+    TOYOTA_EOT_V2: 11
+    TOYOTA_EOT_V2_V2: 11
+  response: |-
+    708102262107B000005
+    70821420101AD7F8380
+    70822E2800A7F798000
+    7082380008000000083
+    7082433655033320004
+- expected_values:
     TOYOTA_EOT_V2: 43
     TOYOTA_EOT_V2_V2: 43
   response: |-
