--- a/tests/test_cases/2024/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2024/commands/700.708.22102A.yaml
@@ -54,6 +54,15 @@ test_cases:
     7082186890000000000
 - expected_values:
     TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 6.86275
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 5.29412
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 5.29412
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 2.54902
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 6.47059
+  response: |-
+    708100862102A8D8D86
+    7082190910000000000
+- expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 6.86275
     TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 6.07843
     TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 1.76471
     TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 2.54902
