--- a/tests/test_cases/2024/commands/7D2.7DA.2215F8.yaml
+++ b/tests/test_cases/2024/commands/7D2.7DA.2215F8.yaml
@@ -1,6 +1,9 @@
 command_id: 7D2.7DA.2215F8
 test_cases:
 - expected_values:
+    TOYOTA_12V_T: 7.8
+  response: 7DA056215F801DE
+- expected_values:
     TOYOTA_12V_T: 12.5
   response: 7DA056215F8020D
 - expected_values:
